# srt-corrector

./: .gitignore  README.md  Steve Jobs - 02.mp3_corrected_strict.srt  TODO.md  batch_process_example.sh  cli.py  example_usage.sh  original.txt  original03.txt  original04.txt  out.srt  out_03.srt  pyproject.toml  raw.srt  raw03.srt  srt_corrector.py  srt_corrector_final.py  srt_corrector_strict.py  使用指南.md  确认-通用性说明.txt  算法三重保证机制确认.md  问题分析-Entry255.md
srt_corrector/: __init__.py  __main__.py  cli.py  corrector.py  matching.py  models.py  parsing.py
