[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "srt-corrector"
version = "0.1.0"
description = "SRT字幕修正工具，带精确/模糊匹配流程"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "sirnull" }]
keywords = ["subtitle", "srt", "correction", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Video",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "black>=24.4.2",
    "ruff>=0.6.9",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/sirnull/srt-corrector"

[project.scripts]
srtc = "srt_corrector.cli:run_cli"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build]
exclude = [
    "/tests",
    "/.mypy_cache",
    "/.ruff_cache",
    "/.venv",
    "/build",
    "/dist",
    "/.pytest_cache",
    "/__pycache__",
]

[tool.hatch.build.targets.wheel]
packages = ["srt_corrector"]
